<resources>
    <string name="home_app_name">Home</string>

    <string name="home_main">Home</string>
    <!--home-->
    <string name="home_upgrade">Upgrade</string>
    <string name="home_setting">Setting</string>
    <string name="home_read">Read</string>
    <string name="home_register">Register</string>
    <!--home left menu-->
    <string name="home_menu_about">About</string>
    <string name="home_sign_out">Sign out</string>
    <string name="home_instruction_manual">Instruction manual</string>
    <string name="home_tip">Tip:</string>
    <string name="home_quint_msg">Are you sure you want to quit?</string>

    <!--login-->
    <string name="home_not_register">Not Register yet ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home_register_code">Register Code</string>
    <string name="home_please_enter_code">Please enter register code</string>
    <string name="home_please_enter_code_error">Register code error</string>
    <string name="sign_in">Sign In</string>
    <string name="username_password_empty">Username or Password is Empty</string>
    <string name="login_error">Wrong Username or Password</string>

    <string name="app_version">App Version: %s</string>

    <string name="about_hexing">\u3000\u3000 Hexing, established in 1992, is a multi-national company offering variety of electrical equipment and relevant solution to global power utilities.</string>

    <string name="about_hexing2">\u3000\u3000 With more than two decades of industrial experiences, Hexing is dedicated to develop customized sustainable ecosystem for energy distribution companies including but not limited to micro-grid with renewable energy, distribution automation and smart meter to cash collection resulting in effective revenue protection.</string>

    <string name="about_hexing3">\u3000\u3000 Today, more than 80 countries across the world are utilizing Hexing products and solutions for better tomorrow.</string>
</resources>
