<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_register" />

        <LinearLayout
            android:id="@+id/layoutBack"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_back" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/top"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvHHUId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_bg_edit_text_gray"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_5f5f5f"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_user_name" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutLoginPwd"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/layoutLogin"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_bg_edit_text_gray"
            android:hint="@string/home_register_code"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_5f5f5f"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_password" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutLoginPwd"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/home_bg_btn_main"
        android:gravity="center"
        android:text="@string/home_register"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>